<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="title_activity_home_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="expense_name">Expense</string>
    <string name="expense_amount">Expense amount</string>
    <string name="hint_search_for_an_expense">Search for an savedExpense</string>
    <string name="hint_add_your_annual_expense_here">Add your Annual savedExpense here</string>
    <string name="hint_add_your_daily_expense_here">Add your daily savedExpense here</string>
    <string name="hint_list_of_expense_items">List of Saved Expense items</string>
    <string name="nameerror">Name Cannot be empty</string>
    <string name="emailerror">Enter a valid email address.</string>
    <string name="mobileerror">Enter a valid phone number</string>
    <string name="confirmerror">Password doesn\'t match</string>
    <string name="pwderror">Password should consist of atleast [0–9],[a-z],[A-Z],[@#$%^+=] and min_length is 4.</string>
    <string name="userexists">Username already exists</string>
    <string name="userempty">Name cannot be empty</string>
    <string name="pwdempty">Password cannot be empty</string>
    <string name="confirmpwdempty">Confirm Password cannot be empty</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="signup_now">SignUp Now</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello</string>
    <string name="nav_header_subtitle">User</string>
    <string name="nav_header_desc">Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add_daily_expenses">Add Daily Expenses</string>
    <string name="update_expense">Update Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="saved_expense_title">Expense Title</string>
    <string name="saved_expense_amount">Expense Amount</string>
    <string name="daily_expense_amount">Daily Expense Amount</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reporting">Usages</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About Us</string>
    <string name="menu_updatepwd">Change Password</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_select_date">Select Date</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="update_password">Update Password</string>Learn more about Android app develo
    <string name="help">Please reach us at <a href="https://gmail.com">ExpenseTracker.com</a> for any queries</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="enter_new_email">Enter New Email Address</string>
    <string name="update_email">Update Email</string>
    <string name="menu_changeemail">Change Email</string>
</resources>