<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_addexpenses"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_addexpenses" />
        <item
            android:id="@+id/nav_reporting"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/menu_reporting" />
        <item
            android:id="@+id/nav_updatepassword"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_updatepwd" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_logout" />
    </group>
</menu>