<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.expensetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_addexpenses"
        android:name="com.expensetracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_reporting"
        android:name="com.expensetracker.ui.reporting.ReportingFragment"
        android:label="@string/menu_reporting"
        tools:layout="@layout/fragment_reporting" />


    <fragment
        android:id="@+id/nav_updatepassword"
        android:name="com.expensetracker.ui.updatepassword.UpdatePasswordFragment"
        android:label="@string/menu_updatepwd"
        tools:layout="@layout/fragment_updatepassword" />

    <fragment
        android:id="@+id/nav_updateemail"
        android:name="com.expensetracker.ui.changeemail.ChangeEmailFragment"
        android:label="@string/menu_changeemail"
        tools:layout="@layout/fragment_change_email" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.expensetracker.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.expensetracker.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />


</navigation>