<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/m_edt_desired_saving"
        android:layout_width="243dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="Add your daily expense here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/m_txt_daily_expense_label"
        app:layout_constraintTop_toBottomOf="@+id/m_edt_daily_expense" />

    <TextView
        android:id="@+id/m_txt_desired_saving"
        android:layout_width="114dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_border"
        android:text="Desired saving"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_txt_daily_expense_label" />

    <TextView
        android:id="@+id/m_annual_expense_label"
        android:layout_width="117dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/text_border"
        android:text="Annual Expense:"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/m_edt_annual_income"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/m_edt_annual_income" />

    <EditText
        android:id="@+id/m_edt_annual_income"
        android:layout_width="247dp"
        android:layout_height="36dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/hint_add_your_annual_expense_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/m_txt_daily_expense_label"
        android:layout_width="114dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_border"
        android:text="Daily Expense:"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_annual_expense_label" />

    <EditText
        android:id="@+id/m_edt_daily_expense"
        android:layout_width="243dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/hint_add_your_daily_expense_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/m_txt_daily_expense_label"
        app:layout_constraintTop_toBottomOf="@+id/m_edt_annual_income" />

    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_txt_desired_saving" />

    <TextView
        android:id="@+id/m_txt_list_of_expense_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hint_list_of_expense_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/saved_expense_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:scrollbarSize="6dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_txt_list_of_expense_label"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/make_model_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />
</androidx.constraintlayout.widget.ConstraintLayout>